[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
office = "0.8.0"
calamine = "0.24.0"
rand = "0.8.4"
nalgebra = "0.32.5"
ndarray-rand = "0.14.0"
seed = "0.9"
actix-web = "4.0"
actix-multipart = "0.6.1"
futures = "0.3.30"
actix-files = "0.6.5"
log = "0.4"
env_logger = "0.9"
